// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spider tests Spider rendered without crushing 1`] = `
<div
  className="spider  red
                             move-up
                             turn-up"
  onAnimationEnd={[Function]}
  style={
    Object {
      "left": "24rem",
      "top": "24rem",
    }
  }
>
  <div
    className="body"
  >
    <div
      className="eyes"
    >
      <div
        className="pupils"
      />
    </div>
    <div
      className="eyes"
    >
      <div
        className="pupils"
      />
    </div>
  </div>
  <div
    className="bottom"
  >
    <div
      className="claws"
    >
      <div
        className="claw"
      />
      <div
        className="claw"
      />
      <div
        className="claw"
      />
      <div
        className="claw"
      />
    </div>
  </div>
</div>
`;

exports[`Spider tests Spider rendered without crushing 2`] = `
<div
  className="spider  green
                             move-up
                             turn-up"
  onAnimationEnd={[Function]}
  style={
    Object {
      "left": "24rem",
      "top": "24rem",
    }
  }
>
  <div
    className="body"
  >
    <div
      className="eyes"
    >
      <div
        className="pupils"
      />
    </div>
    <div
      className="eyes"
    >
      <div
        className="pupils"
      />
    </div>
  </div>
  <div
    className="bottom"
  >
    <div
      className="claws"
    >
      <div
        className="claw"
      />
      <div
        className="claw"
      />
      <div
        className="claw"
      />
      <div
        className="claw"
      />
    </div>
  </div>
</div>
`;

exports[`Spider tests Spider rendered without crushing 3`] = `
<div
  className="spider  blue
                             move-up
                             turn-up"
  onAnimationEnd={[Function]}
  style={
    Object {
      "left": "24rem",
      "top": "24rem",
    }
  }
>
  <div
    className="body"
  >
    <div
      className="eyes"
    >
      <div
        className="pupils"
      />
    </div>
    <div
      className="eyes"
    >
      <div
        className="pupils"
      />
    </div>
  </div>
  <div
    className="bottom"
  >
    <div
      className="claws"
    >
      <div
        className="claw"
      />
      <div
        className="claw"
      />
      <div
        className="claw"
      />
      <div
        className="claw"
      />
    </div>
  </div>
</div>
`;

exports[`Spider tests Spider rendered without crushing 4`] = `
<div
  className="spider drugged orange
                             move-up
                             turn-up"
  onAnimationEnd={[Function]}
  style={
    Object {
      "left": "24rem",
      "top": "24rem",
    }
  }
>
  <div
    className="body"
  >
    <div
      className="eyes"
    >
      <div
        className="pupils"
      />
    </div>
    <div
      className="eyes"
    >
      <div
        className="pupils"
      />
    </div>
  </div>
  <div
    className="bottom"
  >
    <div
      className="claws"
    >
      <div
        className="claw"
      />
      <div
        className="claw"
      />
      <div
        className="claw"
      />
      <div
        className="claw"
      />
    </div>
  </div>
</div>
`;
